<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Bai2">

    <TextView
        android:id="@+id/txtQLSV2"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="18dp"
        android:background="@color/purple"
        android:text="@string/tvAppname"
        android:textColor="@color/white"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/searchTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/nude"
        android:text="@string/enterName"
        app:layout_constraintTop_toBottomOf="@+id/txtQLSV2"
        tools:ignore="MissingConstraints" />


    <EditText
        android:id="@+id/edtName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:hint="@string/hintname"
        app:layout_constraintStart_toEndOf="@+id/searchTextview"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/searchTextview2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@color/nude"
        android:text="@string/tvid"
        app:layout_constraintTop_toTopOf="@+id/searchTextview"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/edtName2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/hintid"
        app:layout_constraintStart_toEndOf="@+id/searchTextview"
        app:layout_constraintTop_toBottomOf="@+id/edtName" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:background="@color/nude"
        android:text="@string/Categories"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchTextview2" />

    <RadioGroup
        android:id="@+id/rgType"
        android:layout_width="293dp"
        android:layout_height="30dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="7dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/edtName2">

        <RadioButton
            android:id="@+id/rd_FT"
            android:layout_width="148dp"
            android:layout_height="match_parent"
            android:text="@string/tvFT" />

        <RadioButton
            android:id="@+id/rd_PT"
            android:layout_width="149dp"
            android:layout_height="match_parent"
            android:text="@string/tvPT"
            app:layout_constraintStart_toEndOf="@+id/rd_FT" />
    </RadioGroup>

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="200dp"
        android:layout_height="38dp"
        android:backgroundTint="@color/pastel_green"
        android:text="@string/add"
        android:textColor="@color/white"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="@+id/edtName2"
        app:layout_constraintTop_toBottomOf="@+id/rgType" />

    <TextView
        android:id="@+id/tv_person"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/purple"
        app:layout_constraintTop_toBottomOf="@+id/btnAdd" />

    <ListView
        android:id="@+id/lv_person"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_person"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>