<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Bai1">
    <TextView
        android:id="@+id/searchTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/enterName"
        android:background="@color/nude"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />


    <EditText
        android:id="@+id/edtName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/hint"
        app:layout_constraintStart_toEndOf="@+id/searchTextview"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAdd"
        android:backgroundTint ="@color/pastel_green"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/search"
        android:textColor="@color/white"
        android:layout_marginBottom="20dp"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@+id/edtName"
        app:layout_constraintStart_toStartOf="@+id/edtName"
        />

    <TextView
        android:id="@+id/tv_person"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple"
        app:layout_constraintTop_toBottomOf="@+id/btnAdd"
        />

    <ListView
        android:id="@+id/lv_person"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_person" />

</androidx.constraintlayout.widget.ConstraintLayout>